NEW USERADMIN NEW STYLING #4

--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -239,7 +239,7 @@
 .footer-icon img {
     width: 40px;
     height: 40px;
-    filter: grayscale(100%) brightness(60%);
+    filter: grayscale(100%) brightness(90%);
     transition: filter 0.3s ease;
 }
 
@@ -962,7 +962,7 @@
           <div class="admin-card">
             <div class="card-left">
               <span class="card-icon">🕒</span>
-              <span class="card-title">Tasks Needing Approval</span>
+              <span class="card-title">Tasks Needing Approval 1</span>
             </div>
             <div class="card-right">
               <span class="card-count" id="approvalCount">(0)</span>
@@ -1949,7 +1949,8 @@ async function loadOverdueTasks() {
     if (!res.ok) throw new Error(data.error || "Failed to load tasks");
 
     const allTasks = data.tasks || [];
-    const todayStr = new Date().toLocaleDateString("sv-SE");
+    const todayStr = selectedDate;
+
 
     const overdueTasks = allTasks.filter(task => {
       if (!task || !task.users || !task.title || !task.date) return false;
