NEW USERADMIN NEW STYLING #6

--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -239,7 +239,7 @@
 .footer-icon img {
     width: 40px;
     height: 40px;
-    filter: grayscale(100%) brightness(90%);
+    filter: grayscale(100%) brightness(100%) opacity(0.6);
     transition: filter 0.3s ease;
 }
 
@@ -962,7 +962,7 @@
           <div class="admin-card">
             <div class="card-left">
               <span class="card-icon">🕒</span>
-              <span class="card-title">Tasks Needing Approval 1</span>
+              <span class="card-title">Tasks Needing Approval 2</span>
             </div>
             <div class="card-right">
               <span class="card-count" id="approvalCount">(0)</span>
