--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -962,7 +962,7 @@
           <div class="admin-card">
             <div class="card-left">
               <span class="card-icon">🕒</span>
-              <span class="card-title">Tasks Needing Approval 2</span>
+              <span class="card-title">Tasks Needing Approval 3</span>
             </div>
             <div class="card-right">
               <span class="card-count" id="approvalCount">(0)</span>
@@ -1011,7 +1011,7 @@
         </div>
 
 
-        <div id="overdueTasks" class="task-list" style="padding: 0 15px;"></div>
+        <div id="overdueTasks" class="task-list" style="padding: 0 15px; margin-top: -10px;"></div>
         
         
 
@@ -2112,14 +2112,22 @@ async function loadOverdueTasks() {
     } else {
       overdueContainer.innerHTML = "";
       overdueTasks.forEach(task => {
+
         const div = document.createElement("div");
-        div.className = "task-item";
-        div.innerHTML = `
-          <strong>${task.title}</strong><br>
-          <span>${task.settings?.includes("Rotation") ? "Rotation" : "Individual"} Task</span><br>
-          <span>Reward: ${task.reward || 0} 🍯</span>
-        `;
-        overdueContainer.appendChild(div);
+div.className = "task-entry";
+div.innerHTML = `
+  <h3 class="task-title">${task.title}</h3>
+  <div class="task-details show">
+    <p style="margin-top: 8px;">Type: ${task.settings?.includes("Rotation") ? "Rotation" : "Individual"}</p>
+    <p>Reward: ${task.reward || 0} 🍯</p>
+    <p style="font-style: italic; color: #ccc;">Task overdue for: ${task.users?.join(", ")}</p>
+  </div>
+`;
+overdueContainer.appendChild(div);
+
+
+
+
       });
     }
 
