--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -462,6 +462,20 @@
         width: 35px;
         height: 35px;
     }
+
+
+    .overdue-task {
+  font-size: 13px;
+  padding: 8px 10px;
+}
+.overdue-task .task-title {
+  font-size: 14px;
+}
+.overdue-task .task-info {
+  font-size: 12px;
+}
+
+
 }
 
 
@@ -928,6 +942,27 @@
   transition: all 0.3s ease;
 }
 
+/* Overdue task compact layout */
+.overdue-task {
+  background: #2A2B32;
+  border: 1px solid var(--border-dark);
+  border-radius: 10px;
+  padding: 10px 12px;
+  margin-top: 8px;
+  color: white;
+  font-size: 14px;
+}
+.overdue-task .task-title {
+  font-weight: 600;
+  font-size: 15px;
+  margin: 0;
+}
+.overdue-task .task-info {
+  font-style: italic;
+  font-size: 13px;
+  color: #ccc;
+  margin-top: 4px;
+}
 
 
   </style>
@@ -2116,17 +2151,17 @@ async function loadOverdueTasks() {
       overdueContainer.innerHTML = "";
       overdueTasks.forEach(task => {
 
+
+
         const div = document.createElement("div");
-div.className = "task-entry";
+div.className = "overdue-task";
 div.innerHTML = `
-  <h3 class="task-title">${task.title}</h3>
-  <div class="task-details show">
-    <p style="margin-top: 8px;">Type: ${task.settings?.includes("Rotation") ? "Rotation" : "Individual"}</p>
-    <p>Reward: ${task.reward || 0} 🍯</p>
-    <p style="font-style: italic; color: #ccc;">Task overdue for: ${task.users?.join(", ")}</p>
-  </div>
+  <div class="task-title">${task.title}</div>
+  <div class="task-info">Task overdue for: ${task.users?.join(", ")}</div>
 `;
 overdueContainer.appendChild(div);
+
+
 
 
 
