--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -1033,7 +1033,7 @@
             <div style="display: flex; justify-content: space-between; align-items: center;">
               <div class="card-left">
                 <span class="card-icon">🕒</span>
-                <span class="card-title">Tasks Needing Approval</span>
+                <span class="card-title">Tasks Needing Approval 1</span>
               </div>
               <div class="card-right">
                 <span class="card-count" id="approvalCount">(0)</span>
@@ -1175,7 +1175,48 @@
   <script>
 
 
+async function migrateTaskData() {
+  const db = await connectDB();
+  const admins = db.collection("admins");
+  const adminCursor = admins.find();
 
+  while (await adminCursor.hasNext()) {
+    const admin = await adminCursor.next();
+    const tasks = admin.tasks || [];
+
+    for (const task of tasks) {
+      for (const date in task.completions) {
+        const oldCompletions = task.completions[date];
+        if (oldCompletions.length > 0 && typeof oldCompletions[0] === "string") {
+          const newCompletions = [];
+          const userCounts = {};
+          oldCompletions.forEach(user => {
+            userCounts[user] = (userCounts[user] || 0) + 1;
+            newCompletions.push({ user, repetition: userCounts[user] });
+          });
+          task.completions[date] = newCompletions;
+        }
+      }
+      for (const date in task.pendingCompletions) {
+        const oldPending = task.pendingCompletions[date];
+        if (oldPending.length > 0 && typeof oldPending[0] === "string") {
+          const newPending = [];
+          const userCounts = {};
+          oldPending.forEach(user => {
+            userCounts[user] = (userCounts[user] || 0) + 1;
+            newPending.push({ user, repetition: userCounts[user] });
+          });
+          task.pendingCompletions[date] = newPending;
+        }
+      }
+    }
+
+    await admins.updateOne(
+      { email: admin.email },
+      { $set: { tasks } }
+    );
+  }
+}
 
 
 
@@ -1719,6 +1760,7 @@ fetchUsersFromServer(adminEmail).then(users => {
 
 
 
+
 async function handleDecision(title, date, index, decision, user, event) {
   try {
     const button = event.target;
@@ -1729,6 +1771,29 @@ async function handleDecision(title, date, index, decision, user, event) {
       btn.style.opacity = "0.5";
     });
 
+    // Fetch task data to check completion status
+    const res = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`);
+    const data = await res.json();
+    if (!res.ok) throw new Error(data.error || "Failed to load tasks");
+
+    const task = data.tasks.find(t => t.title === title && t.date.includes(date));
+    if (!task) throw new Error("Task not found");
+
+    const turnData = task.settings?.includes("Individual") ? individualTurnData(task, selectedDate) : null;
+    if (!turnData) throw new Error("Invalid turn data");
+
+    // Find the turn to get repetition
+    const turn = turnData.turns[index];
+    if (!turn) throw new Error("Invalid turn index");
+
+    // Check if user has already completed the required number of turns
+    const userCompletions = turnData.turns.filter(t => t.user === user && t.isCompleted).length;
+    const requiredTimes = task.timesPerDay || 1;
+
+    if (decision === "accept" && userCompletions >= requiredTimes) {
+      throw new Error("User has already completed the maximum number of tasks for this day");
+    }
+
     const response = await fetch("https://beemazing.onrender.com/api/review-task", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
@@ -1738,16 +1803,19 @@ async function handleDecision(title, date, index, decision, user, event) {
         date,
         selectedDate,
         user,
-        decision
+        decision,
+        index: parseInt(index),
+        repetition: turn.repetition
       })
     });
 
-    const data = await response.json();
-    if (!response.ok) throw new Error(data.error || "Failed to process decision");
+    const reviewData = await response.json();
+    if (!response.ok) throw new Error(reviewData.error || "Failed to process decision");
 
-    if (decision === "accept" && data.rewardAmount > 0) {
-      await updateLuckyChestProgress(user, data.rewardAmount);
-      await updateUserReward(user, data.rewardAmount);
+    // Only award points if the user hasn't completed the required number of turns
+    if (decision === "accept" && reviewData.rewardAmount > 0 && userCompletions < requiredTimes) {
+      await updateLuckyChestProgress(user, reviewData.rewardAmount);
+      await updateUserReward(user, reviewData.rewardAmount);
       await saveTaskHistory(user, { title });
     }
 
@@ -2212,6 +2280,7 @@ overdueCard.addEventListener("click", () => {
 
 
 
+
 async function loadPendingTasks() {
   const adminEmail = localStorage.getItem("currentAdminEmail");
   const pendingContainer = document.getElementById("pendingTasks");
@@ -2237,8 +2306,12 @@ async function loadPendingTasks() {
       }
       if (!turnData) return false;
 
-      const pendingTurns = turnData.turns.filter(turn => turn.isPending && !turn.isCompleted);
-      return pendingTurns.length > 0;
+      // Only include tasks with pending turns where user hasn't completed all required times
+      const requiredTimes = task.timesPerDay || 1;
+      return turnData.turns.some(turn => {
+        const userCompletions = turnData.turns.filter(t => t.user === turn.user && t.isCompleted).length;
+        return turn.isPending && !turn.isCompleted && userCompletions < requiredTimes;
+      });
     });
 
     document.getElementById("approvalCount").textContent = `(${pendingTasks.length})`;
@@ -2255,18 +2328,22 @@ async function loadPendingTasks() {
           turnData = typeof individualTurnData === "function" ? individualTurnData(task, todayStr) : { turns: [] };
         }
 
+        const requiredTimes = task.timesPerDay || 1;
         turnData.turns.filter(turn => turn.isPending && !turn.isCompleted).forEach(turn => {
-          const div = document.createElement("div");
-          div.className = "pending-task";
-          div.innerHTML = `
-            <div class="task-title">${task.title}</div>
-            <div class="task-info">Submitted by: ${turn.user}</div>
-            <div class="task-actions">
-              <button class="accept-btn" onclick="handleDecision('${task.title}', '${task.date}', ${turn.index}, 'accept', '${turn.user}', event)">Accept</button>
-              <button class="decline-btn" onclick="handleDecision('${task.title}', '${task.date}', ${turn.index}, 'decline', '${turn.user}', event)">Decline</button>
-            </div>
-          `;
-          pendingContainer.appendChild(div);
+          const userCompletions = turnData.turns.filter(t => t.user === turn.user && t.isCompleted).length;
+          if (userCompletions < requiredTimes) {
+            const div = document.createElement("div");
+            div.className = "pending-task";
+            div.innerHTML = `
+              <div class="task-title">${task.title}</div>
+              <div class="task-info">Submitted by: ${turn.user} (Attempt ${turn.repetition})</div>
+              <div class="task-actions">
+                <button class="accept-btn" onclick="handleDecision('${task.title}', '${task.date}', ${turn.index}, 'accept', '${turn.user}', event)">Accept</button>
+                <button class="decline-btn" onclick="handleDecision('${task.title}', '${task.date}', ${turn.index}, 'decline', '${turn.user}', event)">Decline</button>
+              </div>
+            `;
+            pendingContainer.appendChild(div);
+          }
         });
       });
     }
@@ -2275,6 +2352,12 @@ async function loadPendingTasks() {
     pendingContainer.innerHTML = "<p>Error loading pending tasks</p>";
   }
 }
+
+
+
+
+
+
 
 
 const approvalCard = document.getElementById("approvalCard");
