--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -695,13 +695,13 @@ if (typeof mixedTurnData === 'undefined' || typeof individualTurnData === 'undef
                 } else {
                     try {
                         turnData = individualTurnData(task, selectedDate);
+                        const requiredPerUser = turnData.requiredTimes; // Already task.timesPerDay
                         taskHTML += `<br><em>Individual Task</em>`;
                         task.users.forEach(user => {
                             const userTurns = turnData.turns.filter(t => t.user === user);
                             const count = userTurns.filter(t => t.isCompleted || t.isPending).length;
-                            const required = turnData.requiredTimes;
-                            const check = count >= required ? '✅' : '';
-                            taskHTML += `<br>${user}: ${count}/${required} ${check}`;
+                            const check = count >= requiredPerUser ? '✅' : '';
+                            taskHTML += `<br>${user}: ${count}/${requiredPerUser} ${check}`;
                         });
                     } catch (err) {
                         console.error(`Error processing Individual task "${task.title}" on ${selectedDate}:`, err, task);
@@ -770,20 +770,15 @@ async function showTaskDetails(task) {
         ${task.repeat === "Weekly" && task.timesPerWeek ? ` - ${task.timesPerWeek} time(s)/week` : ""}
         ${task.repeat === "Monthly" && task.timesPerMonth ? ` - ${task.timesPerMonth} time(s)/month` : ""}
         <br>
-
-
-${(() => {
-    const [fromDate, toDate] = (task.date || "").split(" to ");
-    if (!fromDate) return `<strong>Date:</strong> Unknown<br>`;
-    if (!toDate || toDate === "3000-01-01" || toDate === fromDate) {
-        return `<strong>Date:</strong> ${fromDate}<br>`;
-    } else {
-        return `<strong>Date:</strong> ${fromDate} to ${toDate}<br>`;
-    }
-})()}
-
-
-
+        ${(() => {
+            const [fromDate, toDate] = (task.date || "").split(" to ");
+            if (!fromDate) return `<strong>Date:</strong> Unknown<br>`;
+            if (!toDate || toDate === "3000-01-01" || toDate === fromDate) {
+                return `<strong>Date:</strong> ${fromDate}<br>`;
+            } else {
+                return `<strong>Date:</strong> ${fromDate} to ${toDate}<br>`;
+            }
+        })()}
         <strong>Users:</strong> ${userOrder.join(", ") || "None"}<br>
         ${task.reward && task.reward !== "0" ? `<strong>Reward:</strong> ${task.reward} 🍯<br>` : ""}
     `;
@@ -836,13 +831,13 @@ ${(() => {
         } else {
             try {
                 turnData = individualTurnData(task, selectedDate);
+                const requiredPerUser = turnData.requiredTimes; // Already task.timesPerDay
                 taskDetails += `<strong>Settings:</strong> Individual<br><strong>Progress:</strong><br>`;
                 task.users.forEach(user => {
                     const userTurns = turnData.turns.filter(t => t.user === user);
                     const count = userTurns.filter(t => t.isCompleted || t.isPending).length;
-                    const required = turnData.requiredTimes;
-                    const check = count >= required ? '✅' : '';
-                    taskDetails += `${user}: ${count}/${required} ${check}<br>`;
+                    const check = count >= requiredPerUser ? '✅' : '';
+                    taskDetails += `${user}: ${count}/${requiredPerUser} ${check}<br>`;
                 });
             } catch (err) {
                 console.error(`Error processing Individual task "${task.title}" on ${selectedDate} in showTaskDetails:`, err, task);
@@ -854,7 +849,7 @@ ${(() => {
     }
 
     const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
-    const uniqueUsers = [...new Set(completedUsers)];
+    const uniqueUsers = [...new Set(completedUsers.map(c => c.user))];
     if (uniqueUsers.length > 0) {
         taskDetails += `
             <div style="margin-top: 8px;">
@@ -877,15 +872,21 @@ ${(() => {
         if (e.target.classList.contains("task-modal")) modal.remove();
     });
 
-
     document.getElementById("editTaskBtn").addEventListener("click", () => {
-    const encodedTitle = encodeURIComponent(task.title);
-    const encodedDate = encodeURIComponent(task.date.split(" to ")[0]); // Use start date
-    window.location.href = `/BeeMazing-Y1/mobile/3-Tasks/addtasks.html?editTitle=${encodedTitle}&editDate=${encodedDate}`;
-});
-
-
+        const encodedTitle = encodeURIComponent(task.title);
+        const encodedDate = encodeURIComponent(task.date.split(" to ")[0]); // Use start date
+        window.location.href = `/BeeMazing-Y1/mobile/3-Tasks/addtasks.html?editTitle=${encodedTitle}&editDate=${encodedDate}`;
+    });
 }
+
+
+
+
+
+
+
+
+
 
 
 
